--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -155,6 +155,7 @@
 			<properties>
 				<jetty.web.override>override-web-mojarra.xml</jetty.web.override>
 				<slf4j.version>2.0.7</slf4j.version>
+				<weld.version>3.1.9.Final</weld.version>
 			</properties>
 			<build>
 				<plugins>
@@ -182,7 +183,6 @@
 					<artifactId>jakarta.faces</artifactId>
 					<version>${mojarra.version}</version>
 				</dependency>
-
 				<dependency>
 					<groupId>org.slf4j</groupId>
 					<artifactId>slf4j-api</artifactId>
@@ -193,49 +193,19 @@
 					<artifactId>slf4j-simple</artifactId>
 					<version>${slf4j.version}</version>
 				</dependency>
-			</dependencies>
-		</profile>
-
-		<profile>
-			<id>weld-shaded</id>
-			<activation>
-				<property>
-					<name>weld.library</name>
-					<value>shaded</value>
-				</property>
-			</activation>
-			<dependencies>
 				<dependency>
-					<groupId>org.jboss.weld.servlet</groupId>
-					<artifactId>weld-servlet-shaded</artifactId>
-					<version>3.1.9.Final</version>
+					<!-- This resolves
+						javax.inject.Inject
+						javax.inject.Named
+					-->
+					<groupId>org.glassfish.hk2.external</groupId>
+					<artifactId>javax.inject</artifactId>
+					<version>2.5.0-b62</version>
 				</dependency>
-			</dependencies>
-		</profile>
-
-		<profile>
-			<id>weld-jetty</id>
-			<activation>
-				<property>
-					<name>weld.library</name>
-					<value>jetty</value>
-				</property>
-			</activation>
-			<dependencies>
 				<dependency>
 					<groupId>org.jboss.weld.servlet</groupId>
 					<artifactId>weld-servlet-core</artifactId>
-					<version>3.1.9.Final</version>
-				</dependency>
-				<dependency>
-					<groupId>org.jboss.weld</groupId>
-					<artifactId>weld-core-impl</artifactId>
-					<version>3.1.9.Final</version>
-				</dependency>
-				<dependency>
-					<groupId>org.jboss.weld.module</groupId>
-					<artifactId>weld-jsf</artifactId>
-					<version>3.1.9.Final</version>
+					<version>${weld.version}</version>
 				</dependency>
 			</dependencies>
 		</profile>
