--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -19,6 +19,7 @@
 		<tobago.version>4.6.0</tobago.version>
 		<jetty.version>9.4.51.v20230217</jetty.version>
 		<logback.version>1.2.12</logback.version>
+		<weld.version>3.1.9.Final</weld.version>
 	</properties>
 
 	<dependencies>
@@ -155,7 +156,6 @@
 			<properties>
 				<jetty.web.override>override-web-mojarra.xml</jetty.web.override>
 				<slf4j.version>2.0.7</slf4j.version>
-				<weld.version>3.1.9.Final</weld.version>
 			</properties>
 			<build>
 				<plugins>
@@ -287,6 +287,23 @@
 					<groupId>ch.qos.logback</groupId>
 					<artifactId>logback-core</artifactId>
 					<version>${logback.version}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+
+		<profile>
+			<id>myfaces-tomcat</id>
+			<activation>
+				<property>
+					<name>environment</name>
+					<value>myfaces-tomcat</value>
+				</property>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.jboss.weld.servlet</groupId>
+					<artifactId>weld-servlet-core</artifactId>
+					<version>${weld.version}</version>
 				</dependency>
 			</dependencies>
 		</profile>
