--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -20,6 +20,7 @@
 		<jetty.version>9.4.51.v20230217</jetty.version>
 		<logback.version>1.2.12</logback.version>
 		<weld.version>3.1.9.Final</weld.version>
+		<cargo.version>1.8.5</cargo.version>
 	</properties>
 
 	<dependencies>
@@ -316,7 +317,7 @@
 					<plugin>
 						<groupId>org.codehaus.cargo</groupId>
 						<artifactId>cargo-maven2-plugin</artifactId>
-						<version>1.8.5</version>
+						<version>${cargo.version}</version>
 						<configuration>
 							<container>
 								<containerId>tomee8x</containerId>
@@ -343,7 +344,7 @@
 					<plugin>
 						<groupId>org.codehaus.cargo</groupId>
 						<artifactId>cargo-maven2-plugin</artifactId>
-						<version>1.8.5</version>
+						<version>${cargo.version}</version>
 						<configuration>
 							<container>
 								<containerId>tomcat9x</containerId>
