--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -21,6 +21,7 @@
 		<logback.version>1.2.12</logback.version>
 		<weld.version>3.1.9.Final</weld.version>
 		<cargo.version>1.10.9</cargo.version>
+		<maven-war-plugin.version>3.4.0</maven-war-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -164,7 +165,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-war-plugin</artifactId>
-						<version>3.3.2</version>
+						<version>${maven-war-plugin.version}</version>
 						<executions>
 							<execution>
 								<phase>package</phase>
@@ -219,7 +220,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-war-plugin</artifactId>
-						<version>3.3.2</version>
+						<version>${maven-war-plugin.version}</version>
 						<executions>
 							<execution>
 								<phase>package</phase>
