--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -293,11 +293,18 @@
 					<artifactId>geronimo-interceptor_1.2_spec</artifactId>
 					<version>1.2</version>
 				</dependency>
-				<dependency>
-					<groupId>ch.qos.logback</groupId>
-					<artifactId>logback-classic</artifactId>
-					<version>${logback.version}</version>
-				</dependency>
+			</dependencies>
+		</profile>
+
+		<profile>
+			<id>myfaces-jetty</id>
+			<activation>
+				<property>
+					<name>environment</name>
+					<value>myfaces-jetty</value>
+				</property>
+			</activation>
+			<dependencies>
 				<dependency>
 					<groupId>ch.qos.logback</groupId>
 					<artifactId>logback-core</artifactId>
