--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -61,6 +61,13 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<!-- This resolves java.context.NormalScope -->
+			<groupId>javax.enterprise</groupId>
+			<artifactId>cdi-api</artifactId>
+			<version>2.0.SP1</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.myfaces.tobago</groupId>
 			<artifactId>tobago-core</artifactId>
 			<version>${tobago.version}</version>
