--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,9 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@main
-    - name: Set up JDK 14
+    - name: Set up JDK 17
       uses: actions/setup-java@main
       with:
-        java-version: 14
+        java-version: 17
+        distribution: temurin
     - name: Build with Maven
       run: mvn -B package --file pom.xml
