--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -34,10 +34,10 @@ jobs:
 
     # Set up the correct Java version for your project
     # Please comment out, if your project does not contain Java source code.
-    - name: Set up JDK 14
+    - name: Set up JDK 17
       uses: actions/setup-java@v1
       with:
-        java-version: 14
+        java-version: 17
         java-package: jdk+fx
 
     # Initializes the CodeQL tools for scanning.
@@ -53,7 +53,7 @@ jobs:
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
     - name: Autobuild
-      uses: github/codeql-action/autobuild@v2
+      uses: github/codeql-action/autobuild@main
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 https://git.io/JvXDl
