--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -34,11 +34,11 @@ jobs:
 
     # Set up the correct Java version for your project
     # Please comment out, if your project does not contain Java source code.
-    - name: Set up JDK 17
-      uses: actions/setup-java@v1
+    - name: Set up JDK 20
+      uses: actions/setup-java@main
       with:
-        java-version: 17
-        java-package: jdk+fx
+        java-version: 20
+        distribution: temurin
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
