--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -20,7 +20,7 @@
 		<jetty.version>9.4.51.v20230217</jetty.version>
 		<logback.version>1.2.12</logback.version>
 		<cargo.version>1.10.9</cargo.version>
-		<maven-war-plugin.version>3.3.2</maven-war-plugin.version>
+		<maven-war-plugin.version>3.4.0</maven-war-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -81,6 +81,11 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>${maven-war-plugin.version}</version>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
