--- a/localebean/pom.xml
+++ b/localebean/pom.xml
@@ -17,21 +17,21 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>javax</groupId>
-			<artifactId>javaee-web-api</artifactId>
-			<version>8.0</version>
+			<groupId>jakarta.platform</groupId>
+			<artifactId>jakarta.jakartaee-web-api</artifactId>
+			<version>10.0.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>javax.enterprise</groupId>
-			<artifactId>cdi-api</artifactId>
-			<version>2.0</version>
+			<groupId>jakarta.enterprise</groupId>
+			<artifactId>jakarta.enterprise.cdi-api</artifactId>
+			<version>4.0.1</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>javax.inject</groupId>
-			<artifactId>javax.inject</artifactId>
-			<version>1</version>
+			<groupId>jakarta.inject</groupId>
+			<artifactId>jakarta.inject-api</artifactId>
+			<version>2.0.1</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
@@ -46,8 +46,17 @@
 					<excludes>
 						<exclude>io/github/jmcleodfoss/localebean/Test.class</exclude>
 					</excludes>
+					<classifier>jakarta</classifier>
 				</configuration>
 			</plugin>
+		<plugin>
+			<artifactId>maven-install-plugin</artifactId>
+			<groupId>org.apache.maven.plugins</groupId>
+			<version>3.1.1</version>
+			<configuration>
+				<allowIncompleteProjects>true</allowIncompleteProjects>
+			</configuration>
+		</plugin>
 		</plugins>
 	</build>
 
@@ -60,17 +69,17 @@
 				<configuration>
 					<additionalDependencies>
 						<additionalDependency>
-							<groupId>javax.enterprise</groupId>
-							<artifactId>cdi-api</artifactId>
-							<version>2.0</version>
+							<groupId>jakarta.enterprise</groupId>
+							<artifactId>jakarta.enterprise.cdi-api</artifactId>
+							<version>4.0.1</version>
 						</additionalDependency>
 						<additionalDependency>
-							<groupId>javax.inject</groupId>
-							<artifactId>javax.inject</artifactId>
-							<version>1</version>
+							<groupId>jakarta.inject</groupId>
+							<artifactId>jakarta.inject-api</artifactId>
+							<version>2.0.1</version>
 						</additionalDependency>
 						<additionalDependency>
-							<groupId>javax</groupId>
+							<groupId>jakarta</groupId>
 							<artifactId>javaee-web-api</artifactId>
 							<version>8.0</version>
 						</additionalDependency>
